# cppAvroPhonetic

./: .travis.yml  CMakeLists.txt  README.md
src/: avro.cpp  avro.h  avrophonetic.hpp  banglachars.h  englishtobangla.cpp  englishtobangla.h
test/: test.cpp
test/Test/: Test.cbp
